# etl-showcase

./: .gitignore  Dockerfile.airflow  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: airflow_connections.json
dags/: weather_etl_pipeline.py
scripts/: setup_connections.sh
spark_jobs/: transform_weather.py
sql/: create_weather_tables.sql  init.sql
tests/: test_dag_integrity.py  test_spark_transform.py
